# AI-simulator

./: pyproject.toml
backend/: .env  .env.example  config.py  dify_client.py  evaluation.py  main.py  models.py  requirements.txt  runtime.py  simulator_agent.py  storage.py
backend/data/agent_templates/: ai_doctor_clone.json  triage_customer_service.json
backend/data/patient_profiles/: anxious_mother_child_rhinitis.json  hypertension_followup_worker.json
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/assets/: styles.css
frontend/src/components/: ChatWindow.vue  ConfigPanel.vue
